The Samba-Bugzilla – Bug 10813
vfs_media_harmony crashes
Last modified: 2014-09-29 18:04:31 UTC
8c1b1435fe102d36fbea54a9 in master fixes a media harmony crash
Created attachment 10284 [details] Patch
==> Karolin for 4.1.NEXT
Pushed to v4-1-test.
(In reply to comment #3) > Pushed to v4-1-test. autobuild-v4-1-test
Pushed to v4-1-test. Closing out bug report. Thanks!