media_harmony: Fix a crash bug

Now that the dust has settled, fix a crash bug that was hidden behind
the warnings...

Bug: https://bugzilla.samba.org/show_bug.cgi?id=10813

Signed-off-by: Volker Lendecke <vl@samba.org>
Reviewed-by: Simo Sorce <idra@samba.org>
Reviewed-by: Michael Adam <obnox@samba.org>

Autobuild-User(master): Michael Adam <obnox@samba.org>
Autobuild-Date(master): Fri Sep 12 02:45:40 CEST 2014 on sn-devel-104